--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.7.4",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
@@ -53,6 +54,7 @@
     "node-cron": "^3.0.3",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.0.375",
+    "pg": "^8.16.3",
     "puppeteer": "^24.4.0",
     "puppeteer-core": "^24.4.0",
     "react": "^18.3.1",
